--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
             <img src="https://static2.bigstockphoto.com/8/8/6/small2/68839537.jpg" class="user"/>
             
             <div class="container">
-                <p style="color:chartreuse; font-size:25px; position: relative; top:3px; left:50px;"> LOGIN FORM </p>
+                <p style="color:chartreuse; font-size:25px; position: relative; top:3px; left:50px;"> LOGIN FORM1 </p>
                 
            <p> ID</p><input type="text" name="no1"/><br/>
            <p>NAME</p><input type="text" name="no2"/><br/>
